--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,17 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
+    Andromeda,
     Capr,
     CirceR,
     CohortDiagnostics,
     CohortGenerator,
     data.table,
     DatabaseConnector,
+    dplyr,
+    FeatureExtraction,
     roxygen2,
+    SqlRender,
+    stringr,
+    tidyr,
     uuid
