Versio corretgida per a construir la covariateData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,4 @@ export(createSmokingCovariateSettings)
 export(getDbSmokingCovariateData)
 export(runDiagnostic)
 export(runStudy)
+export(transformToFlat)
