afeguim temps des de T2DM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(CreateSQL_T2DM_outcome)
 export(buildData)
 export(createCohort)
 export(createSmokingCovariateSettings)
+export(createT2DM_TimeCovariateSettings)
 export(getDbSmokingCovariateData)
+export(getDbuseT2DM_TimeCovariateData)
 export(runDiagnostic)
 export(runStudy)
 export(transformToFlat)
