Canviem els outcomes de conjunt a separats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(CreateSQL_AMI)
 export(CreateSQL_T1DM)
 export(CreateSQL_T2DM)
 export(CreateSQL_T2DM_outcome)
+export(CreateSQL_TIA)
+export(CreateSQL_angor)
+export(CreateSQL_stroke_i)
 export(buildData)
 export(createCohort)
 export(createSmokingCovariateSettings)
