afeguim les malalties que mira en Daniel

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,10 @@ Imports:
     CirceR,
     CohortDiagnostics,
     CohortGenerator,
-    data.table,
     DatabaseConnector,
     dplyr,
     FeatureExtraction,
-    roxygen2,
+    rlang,
     SqlRender,
     stringr,
-    tidyr,
-    uuid
+    tidyr
