Afegim la funcio buildFollowUp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(CreateSQL_TIA)
 export(CreateSQL_angor)
 export(CreateSQL_stroke_i)
 export(buildData)
+export(buildFollowUp)
 export(createCohort)
 export(createSmokingCovariateSettings)
 export(createT2DM_TimeCovariateSettings)
